--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <!DOCTYPE html>
 <html lang='en' class='wfl hfl m00'>
 
-<!-- /////////////////////////////////////////////////////////////////////////// GUIDE
+<!--//////////////////////////////////////////////////////////////////////////// GUIDE
 
 INFO about the project
 
 -->
 
-<!-- /////////////////////////////////////////////////////////////////////////// HEAD
+<!--//////////////////////////////////////////////////////////////////////////// HEAD
 -->
 <head>
   <meta charset='UTF-8'>
@@ -17,16 +17,15 @@ INFO about the project
   <link type='image/png' rel='shortcut icon' href='images/favicon.png'/>
 </head>
 
-<!-- /////////////////////////////////////////////////////////////////////////// TEMPLATE
--->
-<div id='' class='' style=''></div>
-
-<!-- /////////////////////////////////////////////////////////////////////////// BODY
+<!--//////////////////////////////////////////////////////////////////////////// BODY
 -->
 <body class='wfl hfl m00 cnt' oncontextmenu='return false'>
 
   <div id='arena' class='brd'>
 
+    <!--========================================================================
+    ARENA CELLS
+    -->
     <div id='A01' class='cll flt cnt drd brd ssns'>A 01</div>
     <div id='A02' class='cll flt cnt lrd brd ssns'>A 02</div>
     <div id='A03' class='cll flt cnt drd brd ssns'>A 03</div>
@@ -69,7 +68,7 @@ INFO about the project
     <div id='B19' class='cll flt cnt lrd brd nsss'>B 19</div>
     <div id='B20' class='cll flt cnt drd brd nsss'>B 20</div>
 
-    <div id='C01' class='cll flt cnt dgr brd snns'>C 01</div>
+    <div id='C01' class='cll flt cnt dgr brd snns'><div id='golGre1' class='cnt gol rnd'>C 01</div></div>
     <div id='C02' class='cll flt cnt lgr brd ssnn'>C 02</div>
     <div id='C03' class='cll flt cnt drd brd snss'>C 03</div>
     <div id='C04' class='cll flt cnt lrd brd snnn'>C 04</div>
@@ -88,9 +87,9 @@ INFO about the project
     <div id='C17' class='cll flt cnt drd brd snnn'>C 17</div>
     <div id='C18' class='cll flt cnt lrd brd sssn'>C 18</div>
     <div id='C19' class='cll flt cnt dbl brd snns'>C 19</div>
-    <div id='C20' class='cll flt cnt lbl brd ssnn'>C 20</div>
+    <div id='C20' class='cll flt cnt lbl brd ssnn'><div id='golGre1' class='cnt gol rnd'>C 20</div></div>
 
-    <div id='D01' class='cll flt cnt lgr brd nnns'>D 01</div>
+    <div id='D01' class='cll flt cnt lgr brd nnns'><div id='golGre2' class='cnt gol rnd'>D 01</div></div>
     <div id='D02' class='cll flt cnt dgr'>D 02</div>
     <div id='D03' class='cll flt cnt lgr brd ssnn'>D 03</div>
     <div id='D04' class='cll flt cnt drd brd nnss'>D 04</div>
@@ -109,9 +108,9 @@ INFO about the project
     <div id='D17' class='cll flt cnt lrd brd nssn'>D 17</div>
     <div id='D18' class='cll flt cnt dbl brd snns'>D 18</div>
     <div id='D19' class='cll flt cnt lbl'>D 19</div>
-    <div id='D20' class='cll flt cnt dbl brd nsnn'>D 20</div>
+    <div id='D20' class='cll flt cnt dbl brd nsnn'><div id='golGre2' class='cnt gol rnd'>D 20</div></div>
 
-    <div id='E01' class='cll flt cnt dgr brd nnns'>E 01</div>
+    <div id='E01' class='cll flt cnt dgr brd nnns'><div id='golGre3' class='cnt gol rnd'>E 01</div></div>
     <div id='E02' class='cll flt cnt lgr'>E 02</div>
     <div id='E03' class='cll flt cnt dgr'>E 03</div>
     <div id='E04' class='cll flt cnt lgr brd ssnn'>E 04</div>
@@ -130,9 +129,9 @@ INFO about the project
     <div id='E17' class='cll flt cnt dbl brd snns'>E 17</div>
     <div id='E18' class='cll flt cnt lbl'>E 18</div>
     <div id='E19' class='cll flt cnt dbl'>E 19</div>
-    <div id='E20' class='cll flt cnt lbl brd nsnn'>E 20</div>
+    <div id='E20' class='cll flt cnt lbl brd nsnn'><div id='golGre3' class='cnt gol rnd'>E 20</div></div>
 
-    <div id='F01' class='cll flt cnt lgr brd nnns'>F 01</div>
+    <div id='F01' class='cll flt cnt lgr brd nnns'><div id='golGre4' class='cnt gol rnd'>F 01</div></div>
     <div id='F02' class='cll flt cnt dgr'>F 02</div>
     <div id='F03' class='cll flt cnt lgr'>F 03</div>
     <div id='F04' class='cll flt cnt dgr brd nsnn'>F 04</div>
@@ -151,9 +150,9 @@ INFO about the project
     <div id='F17' class='cll flt cnt lbl brd nnns'>F 17</div>
     <div id='F18' class='cll flt cnt dbl'>F 18</div>
     <div id='F19' class='cll flt cnt lbl'>F 19</div>
-    <div id='F20' class='cll flt cnt dbl brd nsnn'>F 20</div>
+    <div id='F20' class='cll flt cnt dbl brd nsnn'><div id='golGre4' class='cnt gol rnd'>F 20</div></div>
 
-    <div id='G01' class='cll flt cnt dgr brd nnns'>G 01</div>
+    <div id='G01' class='cll flt cnt dgr brd nnns'><div id='golGre5' class='cnt gol rnd'>G 01</div></div>
     <div id='G02' class='cll flt cnt lgr'>G 02</div>
     <div id='G03' class='cll flt cnt dgr'>G 03</div>
     <div id='G04' class='cll flt cnt lgr brd nsnn'>G 04</div>
@@ -172,9 +171,9 @@ INFO about the project
     <div id='G17' class='cll flt cnt dbl brd nnns'>G 17</div>
     <div id='G18' class='cll flt cnt lbl'>G 18</div>
     <div id='G19' class='cll flt cnt dbl'>G 19</div>
-    <div id='G20' class='cll flt cnt lbl brd nsnn'>G 20</div>
+    <div id='G20' class='cll flt cnt lbl brd nsnn'><div id='golGre5' class='cnt gol rnd'>G 20</div></div>
 
-    <div id='H01' class='cll flt cnt lgr brd nnns'>H 01</div>
+    <div id='H01' class='cll flt cnt lgr brd nnns'><div id='golGre6' class='cnt gol rnd'>H 01</div></div>
     <div id='H02' class='cll flt cnt dgr'>H 02</div>
     <div id='H03' class='cll flt cnt lgr'>H 03</div>
     <div id='H04' class='cll flt cnt dgr brd nssn'>H 04</div>
@@ -193,9 +192,9 @@ INFO about the project
     <div id='H17' class='cll flt cnt lbl brd nnss'>H 17</div>
     <div id='H18' class='cll flt cnt dbl'>H 18</div>
     <div id='H19' class='cll flt cnt lbl'>H 19</div>
-    <div id='H20' class='cll flt cnt dbl brd nsnn'>H 20</div>
+    <div id='H20' class='cll flt cnt dbl brd nsnn'><div id='golGre6' class='cnt gol rnd'>H 20</div></div>
 
-    <div id='I01' class='cll flt cnt dgr brd nnns'>I 01</div>
+    <div id='I01' class='cll flt cnt dgr brd nnns'><div id='golGre7' class='cnt gol rnd'>I 01</div></div>
     <div id='I02' class='cll flt cnt lgr'>I 02</div>
     <div id='I03' class='cll flt cnt dgr brd nssn'>I 03</div>
     <div id='I04' class='cll flt cnt lrd brd snns'>I 04</div>
@@ -214,9 +213,9 @@ INFO about the project
     <div id='I17' class='cll flt cnt drd brd ssnn'>I 17</div>
     <div id='I18' class='cll flt cnt lbl brd nnss'>I 18</div>
     <div id='I19' class='cll flt cnt dbl'>I 19</div>
-    <div id='I20' class='cll flt cnt lbl brd nsnn'>I 20</div>
+    <div id='I20' class='cll flt cnt lbl brd nsnn'><div id='golGre7' class='cnt gol rnd'>I 20</div></div>
 
-    <div id='J01' class='cll flt cnt lgr brd nnss'>J 01</div>
+    <div id='J01' class='cll flt cnt lgr brd nnss'><div id='golGre8' class='cnt gol rnd'>J 01</div></div>
     <div id='J02' class='cll flt cnt dgr brd nssn'>J 02</div>
     <div id='J03' class='cll flt cnt lrd brd snss'>J 03</div>
     <div id='J04' class='cll flt cnt drd brd nnsn'>J 04</div>
@@ -235,7 +234,7 @@ INFO about the project
     <div id='J17' class='cll flt cnt lrd brd nnsn'>J 17</div>
     <div id='J18' class='cll flt cnt drd brd sssn'>J 18</div>
     <div id='J19' class='cll flt cnt lbl brd nnss'>J 19</div>
-    <div id='J20' class='cll flt cnt dbl brd nssn'>J 20</div>
+    <div id='J20' class='cll flt cnt dbl brd nssn'><div id='golGre8' class='cnt gol rnd'>J 20</div></div>
 
     <div id='K01' class='cll flt cnt drd brd ssns'>K 01</div>
     <div id='K02' class='cll flt cnt lrd brd ssns'>K 02</div>
@@ -279,11 +278,51 @@ INFO about the project
     <div id='L19' class='cll flt cnt lrd brd nsss'>L 19</div>
     <div id='L20' class='cll flt cnt drd brd nsss'>L 20</div>
 
-  </div>
+    <!--========================================================================
+    CENTER MARK
+    -->
+    <div id='center' class='cll gol abs rnd'></div>
+
+    <!--========================================================================
+    BENCH
+    -->
+    <div id='space1' class='wfl flt spc'></div>
+
+    <div id='B01' class='cll flt cnt bnc brd rnd'></div>
+    <div id='B02' class='cll flt cnt bnc brd rnd'></div>
+    <div id='B03' class='cll flt cnt bnc brd rnd'></div>
+    <div id='B04' class='cll flt cnt bnc brd rnd'></div>
+    <div id='B05' class='cll flt cnt bnc brd rnd'></div>
+    <div id='B06' class='cll flt cnt bnc brd rnd'></div>
+    <div id='B07' class='cll flt cnt bnc brd rnd'></div>
+    <div id='B08' class='cll flt cnt bnc brd rnd'></div>
+    <div id='B09' class='cll flt cnt bnc brd rnd'></div>
+    <div id='B10' class='cll flt cnt bnc brd rnd'></div>
+    <div id='B11' class='cll flt cnt bnc brd rnd'></div>
+    <div id='B12' class='cll flt cnt bnc brd rnd'></div>
+    <div id='B13' class='cll flt cnt bnc brd rnd'></div>
+    <div id='B14' class='cll flt cnt bnc brd rnd'></div>
+    <div id='B15' class='cll flt cnt bnc brd rnd'></div>
+    <div id='B16' class='cll flt cnt bnc brd rnd'></div>
+    <div id='B17' class='cll flt cnt bnc brd rnd'></div>
+    <div id='B18' class='cll flt cnt bnc brd rnd'></div>
+    <div id='B19' class='cll flt cnt bnc brd rnd'></div>
+    <div id='B20' class='cll flt cnt bnc brd rnd'></div>
+
+    <!--========================================================================
+    CONSOLE
+    -->
+    <div id='space2' class='wfl flt spc'></div>
+
+    <div id='notation' class='w25 flt cnt brd box dsp msk'>NOTATION</div>
+    <div id='console' class='w50 flt cnt brd box dsp'>CONSOLE</div>
+    <div id='reset' class='w25 flt cnt brd box btn'>RESET</div>
+
+  </div> <!-- id='arena' END -->
 
 </body>
 
-<!-- /////////////////////////////////////////////////////////////////////////// SCRIPTS
+<!--//////////////////////////////////////////////////////////////////////////// SCRIPTS
 -->
 <script type='text/javascript' src='uFunc.js'></script>
 <script type='text/javascript' src='vPath.js'></script>
@@ -292,6 +331,6 @@ INFO about the project
 <script type='text/javascript' src='yChan.js'></script>
 <script type='text/javascript' src='zMain.js'></script>
 
-<!-- /////////////////////////////////////////////////////////////////////// -->
-
+<!--//////////////////////////////////////////////////////////////////////////// END
+-->
 </html>
