--- a/index.html
+++ b/index.html
@@ -320,12 +320,35 @@ INFO about the project
 
   </div> <!-- id='arena' END -->
 
+    <!--========================================================================
+    PLAYERS
+    -->
+    <div id='P01' class='abs pla rnd'></div>
+    <div id='P02' class='abs pla rnd'></div>
+    <div id='P03' class='abs pla rnd'></div>
+    <div id='P04' class='abs pla rnd'></div>
+    <div id='P05' class='abs pla rnd'></div>
+    <div id='P06' class='abs pla rnd'></div>
+    <div id='P07' class='abs pla rnd'></div>
+    <div id='P08' class='abs pla rnd'></div>
+    <div id='P09' class='abs pla rnd'></div>
+    <div id='P10' class='abs pla rnd'></div>
+    <div id='P11' class='abs pla rnd'></div>
+    <div id='P12' class='abs pla rnd'></div>
+    <div id='P13' class='abs pla rnd'></div>
+    <div id='P14' class='abs pla rnd'></div>
+    <div id='P15' class='abs pla rnd'></div>
+    <div id='P16' class='abs pla rnd'></div>
+    <div id='P17' class='abs pla rnd'></div>
+    <div id='P18' class='abs pla rnd'></div>
+    <div id='P19' class='abs pla rnd'></div>
+    <div id='P20' class='abs pla rnd'></div>
+
 </body>
 
 <!--//////////////////////////////////////////////////////////////////////////// SCRIPTS
 -->
-<script type='text/javascript' src='uFunc.js'></script>
-<script type='text/javascript' src='vPath.js'></script>
+<script type='text/javascript' src='vFunc.js'></script>
 <script type='text/javascript' src='wText.js'></script>
 <script type='text/javascript' src='xEncy.js'></script>
 <script type='text/javascript' src='yChan.js'></script>
