--- a/index.html
+++ b/index.html
@@ -316,33 +316,36 @@ INFO about the project
 
     <div id='notation' class='w25 flt cnt brd box dsp msk'>NOTATION</div>
     <div id='console' class='w50 flt cnt brd box dsp'>CONSOLE</div>
-    <div id='reset' class='w25 flt cnt brd box btn'>RESET</div>
 
-  </div> <!-- id='arena' END -->
+    <div id='yes' class='yon box flt cnt brd btn'>Y</div>
+    <div id='reset' class='w25 box flt cnt brd btn'>RESET</div>
+    <div id='no' class='yon box flt cnt brd btn'>N</div>
 
     <!--========================================================================
     ATHLETES
     -->
-    <div id='T00' class='abs atl rnd'></div>
-    <div id='T01' class='abs atl rnd'></div>
-    <div id='T02' class='abs atl rnd'></div>
-    <div id='T03' class='abs atl rnd'></div>
-    <div id='T04' class='abs atl rnd'></div>
-    <div id='T05' class='abs atl rnd'></div>
-    <div id='T06' class='abs atl rnd'></div>
-    <div id='T07' class='abs atl rnd'></div>
-    <div id='T08' class='abs atl rnd'></div>
-    <div id='T09' class='abs atl rnd'></div>
-    <div id='T10' class='abs atl rnd'></div>
-    <div id='T11' class='abs atl rnd'></div>
-    <div id='T12' class='abs atl rnd'></div>
-    <div id='T13' class='abs atl rnd'></div>
-    <div id='T14' class='abs atl rnd'></div>
-    <div id='T15' class='abs atl rnd'></div>
-    <div id='T16' class='abs atl rnd'></div>
-    <div id='T17' class='abs atl rnd'></div>
-    <div id='T18' class='abs atl rnd'></div>
-    <div id='T19' class='abs atl rnd'></div>
+    <div id='T00' class='abs atl btn rnd'></div>
+    <div id='T01' class='abs atl btn rnd'></div>
+    <div id='T02' class='abs atl btn rnd'></div>
+    <div id='T03' class='abs atl btn rnd'></div>
+    <div id='T04' class='abs atl btn rnd'></div>
+    <div id='T05' class='abs atl btn rnd'></div>
+    <div id='T06' class='abs atl btn rnd'></div>
+    <div id='T07' class='abs atl btn rnd'></div>
+    <div id='T08' class='abs atl btn rnd'></div>
+    <div id='T09' class='abs atl btn rnd'></div>
+    <div id='T10' class='abs atl btn rnd'></div>
+    <div id='T11' class='abs atl btn rnd'></div>
+    <div id='T12' class='abs atl btn rnd'></div>
+    <div id='T13' class='abs atl btn rnd'></div>
+    <div id='T14' class='abs atl btn rnd'></div>
+    <div id='T15' class='abs atl btn rnd'></div>
+    <div id='T16' class='abs atl btn rnd'></div>
+    <div id='T17' class='abs atl btn rnd'></div>
+    <div id='T18' class='abs atl btn rnd'></div>
+    <div id='T19' class='abs atl btn rnd'></div>
+
+  </div> <!-- id='arena' END -->
 
 </body>
 
