--- a/index.html
+++ b/index.html
@@ -324,26 +324,187 @@ INFO about the project
     <!--========================================================================
     ATHLETES
     -->
-    <div id='T00' class='abs atl btn rnd'></div>
-    <div id='T01' class='abs atl btn rnd'></div>
-    <div id='T02' class='abs atl btn rnd'></div>
-    <div id='T03' class='abs atl btn rnd'></div>
-    <div id='T04' class='abs atl btn rnd'></div>
-    <div id='T05' class='abs atl btn rnd'></div>
-    <div id='T06' class='abs atl btn rnd'></div>
-    <div id='T07' class='abs atl btn rnd'></div>
-    <div id='T08' class='abs atl btn rnd'></div>
-    <div id='T09' class='abs atl btn rnd'></div>
-    <div id='T10' class='abs atl btn rnd'></div>
-    <div id='T11' class='abs atl btn rnd'></div>
-    <div id='T12' class='abs atl btn rnd'></div>
-    <div id='T13' class='abs atl btn rnd'></div>
-    <div id='T14' class='abs atl btn rnd'></div>
-    <div id='T15' class='abs atl btn rnd'></div>
-    <div id='T16' class='abs atl btn rnd'></div>
-    <div id='T17' class='abs atl btn rnd'></div>
-    <div id='T18' class='abs atl btn rnd'></div>
-    <div id='T19' class='abs atl btn rnd'></div>
+    <div id='T00' class='abs atl btn rnd'>
+      <svg width='42px' height='42px'>
+        <rect width='6' height='6' x='14.5' y='25' class='svg'/>
+        <rect width='6' height='6' x='14.5' y='18' class='svg'/>
+        <rect width='6' height='6' x='21.5' y='18' class='svg'/>
+        <rect width='6' height='6' x='21.5' y='11' class='svg'/>
+      </svg>
+    </div>
+
+    <div id='T01' class='abs atl btn rnd'>
+      <svg width='42px' height='42px'>
+        <rect width='6' height='6' x='14.5' y='11.5' class='svg'/>
+        <rect width='6' height='6' x='21.5' y='18.5' class='svg'/>
+        <rect width='6' height='6' x='21.5' y='25.5' class='svg'/>
+        <rect width='6' height='6' x='14.5' y='25.5' class='svg'/>
+      </svg>
+    </div>
+
+    <div id='T02' class='abs atl btn rnd'>
+      <svg width='42px' height='42px'>
+        <rect width='6' height='6' x='14.5' y='24.5' class='svg'/>
+        <rect width='6' height='6' x='21.5' y='24.5' class='svg'/>
+        <rect width='6' height='6' x='21.5' y='17.5' class='svg'/>
+        <rect width='6' height='6' x='21.5' y='10.5' class='svg'/>
+      </svg>
+    </div>
+
+    <div id='T03' class='abs atl btn rnd'>
+      <svg width='42px' height='42px'>
+        <rect width='6' height='6' x='25' y='11' class='svg'/>
+        <rect width='6' height='6' x='18' y='18' class='svg'/>
+        <rect width='6' height='6' x='18' y='25' class='svg'/>
+        <rect width='6' height='6' x='11.5' y='25' class='svg'/>
+      </svg>
+    </div>
+
+    <div id='T04' class='abs atl btn rnd'>
+      <svg width='42px' height='42px'>
+        <rect width='6' height='6' x='21.5' y='11' class='svg'/>
+        <rect width='6' height='6' x='21.5' y='18' class='svg'/>
+        <rect width='6' height='6' x='21.5' y='25' class='svg'/>
+        <rect width='6' height='6' x='14.5' y='18' class='svg'/>
+      </svg>
+    </div>
+
+    <div id='T05' class='abs atl btn rnd'>
+      <svg width='42px' height='42px'>
+        <rect width='6' height='6' x='11.5' y='25' class='svg'/>
+        <rect width='6' height='6' x='11.5' y='18' class='svg'/>
+        <rect width='6' height='6' x='18' y='11' class='svg'/>
+        <rect width='6' height='6' x='25' y='18' class='svg'/>
+      </svg>
+    </div>
+
+    <div id='T06' class='abs atl btn rnd'>
+      <svg width='42px' height='42px'>
+        <rect width='6' height='6' x='11' y='11.5' class='svg'/>
+        <rect width='6' height='6' x='18' y='25' class='svg'/>
+        <rect width='6' height='6' x='25' y='18' class='svg'/>
+        <rect width='6' height='6' x='18' y='18' class='svg'/>
+      </svg>
+    </div>
+
+    <div id='T07' class='abs atl btn rnd'>
+      <svg width='42px' height='42px'>
+        <rect width='6' height='6' x='24.5' y='7.5' class='svg'/>
+        <rect width='6' height='6' x='17.5' y='14.5' class='svg'/>
+        <rect width='6' height='6' x='10.8' y='21.5' class='svg'/>
+        <rect width='6' height='6' x='17.5' y='28.5' class='svg'/>
+      </svg>
+    </div>
+
+    <div id='T08' class='abs atl btn rnd'>
+      <svg width='42px' height='42px'>
+        <rect width='6' height='6' x='14.5' y='28.5' class='svg'/>
+        <rect width='6' height='6' x='21.5' y='7.5' class='svg'/>
+        <rect width='6' height='6' x='21.5' y='14.5' class='svg'/>
+        <rect width='6' height='6' x='14.5' y='21.5' class='svg'/>
+      </svg>
+    </div>
+
+    <div id='T09' class='abs atl btn rnd'>
+      <svg width='42px' height='42px'>
+        <rect width='6' height='6' x='14.5' y='28.5' class='svg'/>
+        <rect width='6' height='6' x='21.5' y='7.5' class='svg'/>
+        <rect width='6' height='6' x='21.5' y='21.5' class='svg'/>
+        <rect width='6' height='6' x='14.5' y='14.5' class='svg'/>
+      </svg>
+    </div>
+
+    <div id='T10' class='abs atl btn rnd'>
+      <svg width='42px' height='42px'>
+        <rect width='6' height='6' x='21.5' y='8' class='svg'/>
+        <rect width='6' height='6' x='14.5' y='28' class='svg'/>
+        <rect width='6' height='6' x='14.5' y='21.5' class='svg'/>
+        <rect width='6' height='6' x='14.5' y='14.5' class='svg'/>
+      </svg>
+    </div>
+
+    <div id='T11' class='abs atl btn rnd'>
+      <svg width='42px' height='42px'>
+        <rect width='6' height='6' x='25' y='8' class='svg'/>
+        <rect width='6' height='6' x='11' y='28' class='svg'/>
+        <rect width='6' height='6' x='11' y='21.5' class='svg'/>
+        <rect width='6' height='6' x='18' y='14.5' class='svg'/>
+      </svg>
+    </div>
+
+    <div id='T12' class='abs atl btn rnd'>
+      <svg width='42px' height='42px'>
+        <rect width='6' height='6' x='25' y='8' class='svg'/>
+        <rect width='6' height='6' x='11' y='28' class='svg'/>
+        <rect width='6' height='6' x='18' y='21.5' class='svg'/>
+        <rect width='6' height='6' x='18' y='14.5' class='svg'/>
+      </svg>
+    </div>
+
+    <div id='T13' class='abs atl btn rnd'>
+      <svg width='42px' height='42px'>
+        <rect width='6' height='6' x='28.5' y='28' class='svg'/>
+        <rect width='6' height='6' x='7.5' y='8' class='svg'/>
+        <rect width='6' height='6' x='14.5' y='14.5' class='svg'/>
+        <rect width='6' height='6' x='21.5' y='21.5' class='svg'/>
+      </svg>
+    </div>
+
+    <div id='T14' class='abs atl btn rnd'>
+      <svg width='42px' height='42px'>
+        <rect width='6' height='6' x='21.5' y='28' class='svg'/>
+        <rect width='6' height='6' x='21.5' y='7.8' class='svg'/>
+        <rect width='6' height='6' x='21.5' y='14.5' class='svg'/>
+        <rect width='6' height='6' x='14.5' y='21.5' class='svg'/>
+      </svg>
+    </div>
+
+    <div id='T15' class='abs atl btn rnd'>
+      <svg width='42px' height='42px'>
+        <rect width='6' height='6' x='21.5' y='28' class='svg'/>
+        <rect width='6' height='6' x='21.5' y='7.8' class='svg'/>
+        <rect width='6' height='6' x='14.5' y='14.5' class='svg'/>
+        <rect width='6' height='6' x='14.5' y='21.5' class='svg'/>
+      </svg>
+    </div>
+
+    <div id='T16' class='abs atl btn rnd'>
+      <svg width='42px' height='42px'>
+        <rect width='6' height='6' x='18' y='28.5' class='svg'/>
+        <rect width='6' height='6' x='18' y='7.5' class='svg'/>
+        <rect width='6' height='6' x='18' y='14.5' class='svg'/>
+        <rect width='6' height='6' x='18' y='21.5' class='svg'/>
+      </svg>
+    </div>
+
+    <div id='T17' class='abs atl btn rnd'>
+      <svg width='42px' height='42px'>
+        <rect width='6' height='6' x='11' y='11' class='svg'/>
+        <rect width='6' height='6' x='18' y='11' class='svg'/>
+        <rect width='6' height='6' x='24.5' y='25' class='svg'/>
+        <rect width='6' height='6' x='24.5' y='18' class='svg'/>
+      </svg>
+    </div>
+
+    <div id='T18' class='abs atl btn rnd'>
+      <svg width='42px' height='42px'>
+        <rect width='6' height='6' x='14.5' y='14.5' class='svg'/>
+        <rect width='6' height='6' x='21.5' y='14.5' class='svg'/>
+        <rect width='6' height='6' x='14.5' y='21.5' class='svg'/>
+        <rect width='6' height='6' x='21.5' y='21.5' class='svg'/>
+      </svg>
+    </div>
+
+    <div id='T19' class='abs atl btn rnd'>
+      <svg width='42px' height='42px'>
+        <rect width='6' height='6' x='26' y='19' class='svg'/>
+        <rect width='6' height='6' x='19' y='12' class='svg'/>
+        <rect width='6' height='6' x='12' y='19' class='svg'/>
+        <rect width='6' height='6' x='19' y='25.5' class='svg'/>
+      </svg>
+    </div>
+
+    <div id='ball' class='abs atl bal rnd'></div>
 
   </div> <!-- id='arena' END -->
 
