--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@ INFO about the project
     <div id='T14' class='abs stn btn rnd'>
       <svg id='minT14' width='42px' height='42px'>
         <rect id='minT14' width='6' height='6' x='21.5' y='28' class='svg'/>
-        <rect id='minT14' width='6' height='6' x='21.5' y='7.8' class='svg'/>
+        <rect id='minT14' width='6' height='6' x='21.5' y='8' class='svg'/>
         <rect id='minT14' width='6' height='6' x='21.5' y='14.5' class='svg'/>
         <rect id='minT14' width='6' height='6' x='14.5' y='21.5' class='svg'/>
       </svg>
@@ -462,7 +462,7 @@ INFO about the project
     <div id='T15' class='abs stn btn rnd'>
       <svg id='minT15' width='42px' height='42px'>
         <rect id='minT15' width='6' height='6' x='21.5' y='28' class='svg'/>
-        <rect id='minT15' width='6' height='6' x='21.5' y='7.8' class='svg'/>
+        <rect id='minT15' width='6' height='6' x='21.5' y='8' class='svg'/>
         <rect id='minT15' width='6' height='6' x='14.5' y='14.5' class='svg'/>
         <rect id='minT15' width='6' height='6' x='14.5' y='21.5' class='svg'/>
       </svg>
@@ -507,31 +507,30 @@ INFO about the project
     <!--========================================================================
     ZONES
     -->
-    <div id='zon00' class='abs stn zon rnd'></div>
-    <div id='zon01' class='abs stn zon rnd'></div>
-    <div id='zon02' class='abs stn zon rnd'></div>
-    <div id='zon03' class='abs stn zon rnd'></div>
+    <div id='zon00' class='abs zon rnd'></div>
+    <div id='zon01' class='abs zon rnd'></div>
+    <div id='zon02' class='abs zon rnd'></div>
+    <div id='zon03' class='abs zon rnd'></div>
 
-    <div id='zon04' class='abs stn zon rnd'></div>
-    <div id='zon05' class='abs stn zon rnd'></div>
-    <div id='zon06' class='abs stn zon rnd'></div>
-    <div id='zon07' class='abs stn zon rnd'></div>
+    <div id='zon04' class='abs zon rnd'></div>
+    <div id='zon05' class='abs zon rnd'></div>
+    <div id='zon06' class='abs zon rnd'></div>
+    <div id='zon07' class='abs zon rnd'></div>
 
-    <div id='zon08' class='abs stn zon rnd'></div>
-    <div id='zon09' class='abs stn zon rnd'></div>
-    <div id='zon10' class='abs stn zon rnd'></div>
-    <div id='zon11' class='abs stn zon rnd'></div>
+    <div id='zon08' class='abs zon rnd'></div>
+    <div id='zon09' class='abs zon rnd'></div>
+    <div id='zon10' class='abs zon rnd'></div>
+    <div id='zon11' class='abs zon rnd'></div>
 
-    <div id='zon12' class='abs stn zon rnd'></div>
-    <div id='zon13' class='abs stn zon rnd'></div>
-    <div id='zon14' class='abs stn zon rnd'></div>
-    <div id='zon15' class='abs stn zon rnd'></div>
+    <div id='zon12' class='abs zon rnd'></div>
+    <div id='zon13' class='abs zon rnd'></div>
+    <div id='zon14' class='abs zon rnd'></div>
+    <div id='zon15' class='abs zon rnd'></div>
 
     <!--========================================================================
     BALL
     -->
     <div id='ball' class='abs stn bal rnd'></div>
-
 
   </div> <!-- id='arena' END -->
 
