--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
 
 <!--//////////////////////////////////////////////////////////////////////////// GUIDE
 
-INFO about the project
+This is a
+  . turn-based
+  . sport's themed
+  . digital/board game
+
+Hard Ball can actually be played in multiple forms, but there is the standard
+which showcases many possibilities of gameplay as well as delivering a fully
+developed, complex and powerful gaming experience.
+
+This standard form is called TORUS and this iteration is meant to be it!
 
 -->
 
