--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@ This standard form is called TORUS and this iteration is meant to be it!
     <div id='C16' class='cll flt cnt drd brd snnn'>C 16</div>
     <div id='C17' class='cll flt cnt lrd brd sssn'>C 17</div>
     <div id='C18' class='cll flt cnt dbl brd snns'>C 18</div>
-    <div id='C19' class='cll flt cnt lbl brd ssnn'><div id='golGre1' class='cnt gol rnd'>C 19</div></div>
+    <div id='C19' class='cll flt cnt lbl brd ssnn'><div id='golBlu1' class='cnt gol rnd'>C 19</div></div>
 
-    <div id='D00' class='cll flt cnt lgr brd nnns'><div id='golGre2' class='cnt gol rnd'>D 00</div></div>
+    <div id='D00' class='cll flt cnt lgr brd nnns'><div id='golGre2' class='cnt gol rnd sc1'>D 00</div></div>
     <div id='D01' class='cll flt cnt dgr'>D 01</div>
     <div id='D02' class='cll flt cnt lgr brd ssnn'>D 02</div>
     <div id='D03' class='cll flt cnt drd brd nnss'>D 03</div>
@@ -117,9 +117,9 @@ This standard form is called TORUS and this iteration is meant to be it!
     <div id='D16' class='cll flt cnt lrd brd nssn'>D 16</div>
     <div id='D17' class='cll flt cnt dbl brd snns'>D 17</div>
     <div id='D18' class='cll flt cnt lbl'>D 18</div>
-    <div id='D19' class='cll flt cnt dbl brd nsnn'><div id='golGre2' class='cnt gol rnd'>D 19</div></div>
+    <div id='D19' class='cll flt cnt dbl brd nsnn'><div id='golBlu2' class='cnt gol rnd'>D 19</div></div>
 
-    <div id='E00' class='cll flt cnt dgr brd nnns'><div id='golGre3' class='cnt gol rnd'>E 00</div></div>
+    <div id='E00' class='cll flt cnt dgr brd nnns'><div id='golGre3' class='cnt gol rnd sc1'>E 00</div></div>
     <div id='E01' class='cll flt cnt lgr'>E 01</div>
     <div id='E02' class='cll flt cnt dgr'>E 02</div>
     <div id='E03' class='cll flt cnt lgr brd ssnn'>E 03</div>
@@ -138,9 +138,9 @@ This standard form is called TORUS and this iteration is meant to be it!
     <div id='E16' class='cll flt cnt dbl brd snns'>E 16</div>
     <div id='E17' class='cll flt cnt lbl'>E 17</div>
     <div id='E18' class='cll flt cnt dbl'>E 18</div>
-    <div id='E19' class='cll flt cnt lbl brd nsnn'><div id='golGre3' class='cnt gol rnd'>E 19</div></div>
+    <div id='E19' class='cll flt cnt lbl brd nsnn'><div id='golBlu3' class='cnt gol rnd'>E 19</div></div>
 
-    <div id='F00' class='cll flt cnt lgr brd nnns'><div id='golGre4' class='cnt gol rnd'>F 00</div></div>
+    <div id='F00' class='cll flt cnt lgr brd nnns'><div id='golGre4' class='cnt gol rnd sc1'>F 00</div></div>
     <div id='F01' class='cll flt cnt dgr'>F 01</div>
     <div id='F02' class='cll flt cnt lgr'>F 02</div>
     <div id='F03' class='cll flt cnt dgr brd nsnn'>F 03</div>
@@ -159,9 +159,9 @@ This standard form is called TORUS and this iteration is meant to be it!
     <div id='F16' class='cll flt cnt lbl brd nnns'>F 16</div>
     <div id='F17' class='cll flt cnt dbl'>F 17</div>
     <div id='F18' class='cll flt cnt lbl'>F 18</div>
-    <div id='F19' class='cll flt cnt dbl brd nsnn'><div id='golGre4' class='cnt gol rnd'>F 19</div></div>
+    <div id='F19' class='cll flt cnt dbl brd nsnn'><div id='golBlu4' class='cnt gol rnd'>F 19</div></div>
 
-    <div id='G00' class='cll flt cnt dgr brd nnns'><div id='golGre5' class='cnt gol rnd'>G 00</div></div>
+    <div id='G00' class='cll flt cnt dgr brd nnns'><div id='golGre5' class='cnt gol rnd sc1'>G 00</div></div>
     <div id='G01' class='cll flt cnt lgr'>G 01</div>
     <div id='G02' class='cll flt cnt dgr'>G 02</div>
     <div id='G03' class='cll flt cnt lgr brd nsnn'>G 03</div>
@@ -180,9 +180,9 @@ This standard form is called TORUS and this iteration is meant to be it!
     <div id='G16' class='cll flt cnt dbl brd nnns'>G 16</div>
     <div id='G17' class='cll flt cnt lbl'>G 17</div>
     <div id='G18' class='cll flt cnt dbl'>G 18</div>
-    <div id='G19' class='cll flt cnt lbl brd nsnn'><div id='golGre5' class='cnt gol rnd'>G 19</div></div>
+    <div id='G19' class='cll flt cnt lbl brd nsnn'><div id='golBlu5' class='cnt gol rnd'>G 19</div></div>
 
-    <div id='H00' class='cll flt cnt lgr brd nnns'><div id='golGre6' class='cnt gol rnd'>H 00</div></div>
+    <div id='H00' class='cll flt cnt lgr brd nnns'><div id='golGre6' class='cnt gol rnd sc1'>H 00</div></div>
     <div id='H01' class='cll flt cnt dgr'>H 01</div>
     <div id='H02' class='cll flt cnt lgr'>H 02</div>
     <div id='H03' class='cll flt cnt dgr brd nssn'>H 03</div>
@@ -201,9 +201,9 @@ This standard form is called TORUS and this iteration is meant to be it!
     <div id='H16' class='cll flt cnt lbl brd nnss'>H 16</div>
     <div id='H17' class='cll flt cnt dbl'>H 17</div>
     <div id='H18' class='cll flt cnt lbl'>H 18</div>
-    <div id='H19' class='cll flt cnt dbl brd nsnn'><div id='golGre6' class='cnt gol rnd'>H 19</div></div>
+    <div id='H19' class='cll flt cnt dbl brd nsnn'><div id='golBlu6' class='cnt gol rnd'>H 19</div></div>
 
-    <div id='I00' class='cll flt cnt dgr brd nnns'><div id='golGre7' class='cnt gol rnd'>I 00</div></div>
+    <div id='I00' class='cll flt cnt dgr brd nnns'><div id='golGre7' class='cnt gol rnd sc1'>I 00</div></div>
     <div id='I01' class='cll flt cnt lgr'>I 01</div>
     <div id='I02' class='cll flt cnt dgr brd nssn'>I 02</div>
     <div id='I03' class='cll flt cnt lrd brd snns'>I 03</div>
@@ -222,9 +222,9 @@ This standard form is called TORUS and this iteration is meant to be it!
     <div id='I16' class='cll flt cnt drd brd ssnn'>I 16</div>
     <div id='I17' class='cll flt cnt lbl brd nnss'>I 17</div>
     <div id='I18' class='cll flt cnt dbl'>I 18</div>
-    <div id='I19' class='cll flt cnt lbl brd nsnn'><div id='golGre7' class='cnt gol rnd'>I 19</div></div>
+    <div id='I19' class='cll flt cnt lbl brd nsnn'><div id='golBlu7' class='cnt gol rnd'>I 19</div></div>
 
-    <div id='J00' class='cll flt cnt lgr brd nnss'><div id='golGre8' class='cnt gol rnd'>J 00</div></div>
+    <div id='J00' class='cll flt cnt lgr brd nnss'><div id='golGre8' class='cnt gol rnd sc1'>J 00</div></div>
     <div id='J01' class='cll flt cnt dgr brd nssn'>J 01</div>
     <div id='J02' class='cll flt cnt lrd brd snss'>J 02</div>
     <div id='J03' class='cll flt cnt drd brd nnsn'>J 03</div>
@@ -243,7 +243,7 @@ This standard form is called TORUS and this iteration is meant to be it!
     <div id='J16' class='cll flt cnt lrd brd nnsn'>J 16</div>
     <div id='J17' class='cll flt cnt drd brd sssn'>J 17</div>
     <div id='J18' class='cll flt cnt lbl brd nnss'>J 18</div>
-    <div id='J19' class='cll flt cnt dbl brd nssn'><div id='golGre8' class='cnt gol rnd'>J 19</div></div>
+    <div id='J19' class='cll flt cnt dbl brd nssn'><div id='golBlu8' class='cnt gol rnd'>J 19</div></div>
 
     <div id='K00' class='cll flt cnt drd brd ssns'>K 00</div>
     <div id='K01' class='cll flt cnt lrd brd ssns'>K 01</div>
