--- a/index.html
+++ b/index.html
@@ -519,27 +519,50 @@ This standard form is called TORUS and this iteration is meant to be it!
     </div>
 
     <!--========================================================================
-    ZONES
+    HOVER ZONES
     -->
-    <div id='zon00' class='abs zon rnd'></div>
-    <div id='zon01' class='abs zon rnd'></div>
-    <div id='zon02' class='abs zon rnd'></div>
-    <div id='zon03' class='abs zon rnd'></div>
+    <div id='hov00' class='abs zon rnd'></div>
+    <div id='hov01' class='abs zon rnd'></div>
+    <div id='hov02' class='abs zon rnd'></div>
+    <div id='hov03' class='abs zon rnd'></div>
 
-    <div id='zon04' class='abs zon rnd'></div>
-    <div id='zon05' class='abs zon rnd'></div>
-    <div id='zon06' class='abs zon rnd'></div>
-    <div id='zon07' class='abs zon rnd'></div>
+    <div id='hov04' class='abs zon rnd'></div>
+    <div id='hov05' class='abs zon rnd'></div>
+    <div id='hov06' class='abs zon rnd'></div>
+    <div id='hov07' class='abs zon rnd'></div>
 
-    <div id='zon08' class='abs zon rnd'></div>
-    <div id='zon09' class='abs zon rnd'></div>
-    <div id='zon10' class='abs zon rnd'></div>
-    <div id='zon11' class='abs zon rnd'></div>
+    <div id='hov08' class='abs zon rnd'></div>
+    <div id='hov09' class='abs zon rnd'></div>
+    <div id='hov10' class='abs zon rnd'></div>
+    <div id='hov11' class='abs zon rnd'></div>
 
-    <div id='zon12' class='abs zon rnd'></div>
-    <div id='zon13' class='abs zon rnd'></div>
-    <div id='zon14' class='abs zon rnd'></div>
-    <div id='zon15' class='abs zon rnd'></div>
+    <div id='hov12' class='abs zon rnd'></div>
+    <div id='hov13' class='abs zon rnd'></div>
+    <div id='hov14' class='abs zon rnd'></div>
+    <div id='hov15' class='abs zon rnd'></div>
+
+    <!--========================================================================
+    SELECTED ZONES
+    -->
+    <div id='sel00' class='abs zon rnd'></div>
+    <div id='sel01' class='abs zon rnd'></div>
+    <div id='sel02' class='abs zon rnd'></div>
+    <div id='sel03' class='abs zon rnd'></div>
+
+    <div id='sel04' class='abs zon rnd'></div>
+    <div id='sel05' class='abs zon rnd'></div>
+    <div id='sel06' class='abs zon rnd'></div>
+    <div id='sel07' class='abs zon rnd'></div>
+
+    <div id='sel08' class='abs zon rnd'></div>
+    <div id='sel09' class='abs zon rnd'></div>
+    <div id='sel10' class='abs zon rnd'></div>
+    <div id='sel11' class='abs zon rnd'></div>
+
+    <div id='sel12' class='abs zon rnd'></div>
+    <div id='sel13' class='abs zon rnd'></div>
+    <div id='sel14' class='abs zon rnd'></div>
+    <div id='sel15' class='abs zon rnd'></div>
 
   </div> <!-- id='arena' END -->
 
