--- a/index.html
+++ b/index.html
@@ -564,6 +564,8 @@ This standard form is called TORUS and this iteration is meant to be it!
     <div id='sel14' class='abs zon rnd'></div>
     <div id='sel15' class='abs zon rnd'></div>
 
+    <div id='selected' class='abs zon rnd'></div>
+
   </div> <!-- id='arena' END -->
 
 </body>
