--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <!DOCTYPE html>
 <html lang='en' class='wfl hfl m00'>
 
-<!--//////////////////////////////////////////////////////////////////////////// GUIDE
+<!--//////////////////////////////////////////////////////////////////////////// HEAD
 
 This is a
-  . turn-based
-  . sport's themed
-  . digital/board game
+. turn-based
+. sport's themed
+. digital/board game
 
 Hard Ball can actually be played in multiple forms, but there is the standard
 which showcases many possibilities of gameplay as well as delivering a fully
@@ -15,9 +15,6 @@ developed, complex and powerful gaming experience.
 
 This standard form is called TORUS and this iteration is meant to be it!
 
--->
-
-<!--//////////////////////////////////////////////////////////////////////////// HEAD
 -->
 <head>
   <meta charset='UTF-8'>
@@ -30,6 +27,9 @@ This standard form is called TORUS and this iteration is meant to be it!
 -->
 <body class='wfl hfl m00 cnt' oncontextmenu='return false'>
 
+  <!--==========================================================================
+  ARENA
+  -->
   <div id='arena' class='brd'>
 
     <!--========================================================================
@@ -77,7 +77,9 @@ This standard form is called TORUS and this iteration is meant to be it!
     <div id='B18' class='cll flt cnt lrd brd nsss'>B 18</div>
     <div id='B19' class='cll flt cnt drd brd nsss'>B 19</div>
 
-    <div id='C00' class='cll flt cnt dgr brd snns'><div id='golGre1' class='cnt gol rnd'>C 00</div></div>
+    <div id='C00' class='cll flt cnt dgr brd snns'>
+      <div id='golGre1' class='cnt gol rnd'>C 00</div>
+    </div>
     <div id='C01' class='cll flt cnt lgr brd ssnn'>C 01</div>
     <div id='C02' class='cll flt cnt drd brd snss'>C 02</div>
     <div id='C03' class='cll flt cnt lrd brd snnn'>C 03</div>
@@ -96,9 +98,13 @@ This standard form is called TORUS and this iteration is meant to be it!
     <div id='C16' class='cll flt cnt drd brd snnn'>C 16</div>
     <div id='C17' class='cll flt cnt lrd brd sssn'>C 17</div>
     <div id='C18' class='cll flt cnt dbl brd snns'>C 18</div>
-    <div id='C19' class='cll flt cnt lbl brd ssnn'><div id='golBlu1' class='cnt gol rnd'>C 19</div></div>
+    <div id='C19' class='cll flt cnt lbl brd ssnn'>
+      <div id='golBlu1' class='cnt gol rnd'>C 19</div>
+    </div>
 
-    <div id='D00' class='cll flt cnt lgr brd nnns'><div id='golGre2' class='cnt gol rnd sc1'>D 00</div></div>
+    <div id='D00' class='cll flt cnt lgr brd nnns'>
+      <div id='golGre2' class='cnt gol rnd sc1'>D 00</div>
+    </div>
     <div id='D01' class='cll flt cnt dgr'>D 01</div>
     <div id='D02' class='cll flt cnt lgr brd ssnn'>D 02</div>
     <div id='D03' class='cll flt cnt drd brd nnss'>D 03</div>
@@ -117,9 +123,13 @@ This standard form is called TORUS and this iteration is meant to be it!
     <div id='D16' class='cll flt cnt lrd brd nssn'>D 16</div>
     <div id='D17' class='cll flt cnt dbl brd snns'>D 17</div>
     <div id='D18' class='cll flt cnt lbl'>D 18</div>
-    <div id='D19' class='cll flt cnt dbl brd nsnn'><div id='golBlu2' class='cnt gol rnd'>D 19</div></div>
+    <div id='D19' class='cll flt cnt dbl brd nsnn'>
+      <div id='golBlu2' class='cnt gol rnd'>D 19</div>
+    </div>
 
-    <div id='E00' class='cll flt cnt dgr brd nnns'><div id='golGre3' class='cnt gol rnd sc1'>E 00</div></div>
+    <div id='E00' class='cll flt cnt dgr brd nnns'>
+      <div id='golGre3' class='cnt gol rnd sc1'>E 00</div>
+    </div>
     <div id='E01' class='cll flt cnt lgr'>E 01</div>
     <div id='E02' class='cll flt cnt dgr'>E 02</div>
     <div id='E03' class='cll flt cnt lgr brd ssnn'>E 03</div>
@@ -138,9 +148,13 @@ This standard form is called TORUS and this iteration is meant to be it!
     <div id='E16' class='cll flt cnt dbl brd snns'>E 16</div>
     <div id='E17' class='cll flt cnt lbl'>E 17</div>
     <div id='E18' class='cll flt cnt dbl'>E 18</div>
-    <div id='E19' class='cll flt cnt lbl brd nsnn'><div id='golBlu3' class='cnt gol rnd'>E 19</div></div>
+    <div id='E19' class='cll flt cnt lbl brd nsnn'>
+      <div id='golBlu3' class='cnt gol rnd'>E 19</div>
+    </div>
 
-    <div id='F00' class='cll flt cnt lgr brd nnns'><div id='golGre4' class='cnt gol rnd sc1'>F 00</div></div>
+    <div id='F00' class='cll flt cnt lgr brd nnns'>
+      <div id='golGre4' class='cnt gol rnd sc1'>F 00</div>
+    </div>
     <div id='F01' class='cll flt cnt dgr'>F 01</div>
     <div id='F02' class='cll flt cnt lgr'>F 02</div>
     <div id='F03' class='cll flt cnt dgr brd nsnn'>F 03</div>
@@ -159,9 +173,13 @@ This standard form is called TORUS and this iteration is meant to be it!
     <div id='F16' class='cll flt cnt lbl brd nnns'>F 16</div>
     <div id='F17' class='cll flt cnt dbl'>F 17</div>
     <div id='F18' class='cll flt cnt lbl'>F 18</div>
-    <div id='F19' class='cll flt cnt dbl brd nsnn'><div id='golBlu4' class='cnt gol rnd'>F 19</div></div>
+    <div id='F19' class='cll flt cnt dbl brd nsnn'>
+      <div id='golBlu4' class='cnt gol rnd'>F 19</div>
+    </div>
 
-    <div id='G00' class='cll flt cnt dgr brd nnns'><div id='golGre5' class='cnt gol rnd sc1'>G 00</div></div>
+    <div id='G00' class='cll flt cnt dgr brd nnns'>
+      <div id='golGre5' class='cnt gol rnd sc1'>G 00</div>
+    </div>
     <div id='G01' class='cll flt cnt lgr'>G 01</div>
     <div id='G02' class='cll flt cnt dgr'>G 02</div>
     <div id='G03' class='cll flt cnt lgr brd nsnn'>G 03</div>
@@ -180,9 +198,13 @@ This standard form is called TORUS and this iteration is meant to be it!
     <div id='G16' class='cll flt cnt dbl brd nnns'>G 16</div>
     <div id='G17' class='cll flt cnt lbl'>G 17</div>
     <div id='G18' class='cll flt cnt dbl'>G 18</div>
-    <div id='G19' class='cll flt cnt lbl brd nsnn'><div id='golBlu5' class='cnt gol rnd'>G 19</div></div>
+    <div id='G19' class='cll flt cnt lbl brd nsnn'>
+      <div id='golBlu5' class='cnt gol rnd'>G 19</div>
+    </div>
 
-    <div id='H00' class='cll flt cnt lgr brd nnns'><div id='golGre6' class='cnt gol rnd sc1'>H 00</div></div>
+    <div id='H00' class='cll flt cnt lgr brd nnns'>
+      <div id='golGre6' class='cnt gol rnd sc1'>H 00</div>
+    </div>
     <div id='H01' class='cll flt cnt dgr'>H 01</div>
     <div id='H02' class='cll flt cnt lgr'>H 02</div>
     <div id='H03' class='cll flt cnt dgr brd nssn'>H 03</div>
@@ -201,9 +223,13 @@ This standard form is called TORUS and this iteration is meant to be it!
     <div id='H16' class='cll flt cnt lbl brd nnss'>H 16</div>
     <div id='H17' class='cll flt cnt dbl'>H 17</div>
     <div id='H18' class='cll flt cnt lbl'>H 18</div>
-    <div id='H19' class='cll flt cnt dbl brd nsnn'><div id='golBlu6' class='cnt gol rnd'>H 19</div></div>
+    <div id='H19' class='cll flt cnt dbl brd nsnn'>
+      <div id='golBlu6' class='cnt gol rnd'>H 19</div>
+    </div>
 
-    <div id='I00' class='cll flt cnt dgr brd nnns'><div id='golGre7' class='cnt gol rnd sc1'>I 00</div></div>
+    <div id='I00' class='cll flt cnt dgr brd nnns'>
+      <div id='golGre7' class='cnt gol rnd sc1'>I 00</div>
+    </div>
     <div id='I01' class='cll flt cnt lgr'>I 01</div>
     <div id='I02' class='cll flt cnt dgr brd nssn'>I 02</div>
     <div id='I03' class='cll flt cnt lrd brd snns'>I 03</div>
@@ -222,9 +248,13 @@ This standard form is called TORUS and this iteration is meant to be it!
     <div id='I16' class='cll flt cnt drd brd ssnn'>I 16</div>
     <div id='I17' class='cll flt cnt lbl brd nnss'>I 17</div>
     <div id='I18' class='cll flt cnt dbl'>I 18</div>
-    <div id='I19' class='cll flt cnt lbl brd nsnn'><div id='golBlu7' class='cnt gol rnd'>I 19</div></div>
+    <div id='I19' class='cll flt cnt lbl brd nsnn'>
+      <div id='golBlu7' class='cnt gol rnd'>I 19</div>
+    </div>
 
-    <div id='J00' class='cll flt cnt lgr brd nnss'><div id='golGre8' class='cnt gol rnd sc1'>J 00</div></div>
+    <div id='J00' class='cll flt cnt lgr brd nnss'>
+      <div id='golGre8' class='cnt gol rnd sc1'>J 00</div>
+    </div>
     <div id='J01' class='cll flt cnt dgr brd nssn'>J 01</div>
     <div id='J02' class='cll flt cnt lrd brd snss'>J 02</div>
     <div id='J03' class='cll flt cnt drd brd nnsn'>J 03</div>
@@ -243,7 +273,9 @@ This standard form is called TORUS and this iteration is meant to be it!
     <div id='J16' class='cll flt cnt lrd brd nnsn'>J 16</div>
     <div id='J17' class='cll flt cnt drd brd sssn'>J 17</div>
     <div id='J18' class='cll flt cnt lbl brd nnss'>J 18</div>
-    <div id='J19' class='cll flt cnt dbl brd nssn'><div id='golBlu8' class='cnt gol rnd'>J 19</div></div>
+    <div id='J19' class='cll flt cnt dbl brd nssn'>
+      <div id='golBlu8' class='cnt gol rnd'>J 19</div>
+    </div>
 
     <div id='K00' class='cll flt cnt drd brd ssns'>K 00</div>
     <div id='K01' class='cll flt cnt lrd brd ssns'>K 01</div>
@@ -317,18 +349,6 @@ This standard form is called TORUS and this iteration is meant to be it!
     <div id='M17' class='cll flt cnt bnc brd rnd'></div>
     <div id='M18' class='cll flt cnt bnc brd rnd'></div>
     <div id='M19' class='cll flt cnt bnc brd rnd'></div>
-
-    <!--========================================================================
-    CONSOLE
-    -->
-    <div id='space2' class='wfl flt spc'></div>
-
-    <div id='notation' class='w25 flt cnt brd box dsp msk'>NOTATION</div>
-    <div id='console' class='w50 flt cnt brd box dsp'>CONSOLE</div>
-
-    <div id='yes' class='yon box flt cnt brd btn'>Y</div>
-    <div id='reset' class='w25 box flt cnt brd btn'>RESET</div>
-    <div id='no' class='yon box flt cnt brd btn'>N</div>
 
     <!--========================================================================
     BALL
@@ -519,66 +539,59 @@ This standard form is called TORUS and this iteration is meant to be it!
     </div>
 
     <!--========================================================================
-    HOVER ZONES
+    ZONES
     -->
-    <div id='hov00' class='abs zon rnd'></div>
-    <div id='hov01' class='abs zon rnd'></div>
-    <div id='hov02' class='abs zon rnd'></div>
-    <div id='hov03' class='abs zon rnd'></div>
+    <div id='zon00' class='abs zon rnd'></div>
+    <div id='zon01' class='abs zon rnd'></div>
+    <div id='zon02' class='abs zon rnd'></div>
+    <div id='zon03' class='abs zon rnd'></div>
 
-    <div id='hov04' class='abs zon rnd'></div>
-    <div id='hov05' class='abs zon rnd'></div>
-    <div id='hov06' class='abs zon rnd'></div>
-    <div id='hov07' class='abs zon rnd'></div>
+    <div id='zon04' class='abs zon rnd'></div>
+    <div id='zon05' class='abs zon rnd'></div>
+    <div id='zon06' class='abs zon rnd'></div>
+    <div id='zon07' class='abs zon rnd'></div>
 
-    <div id='hov08' class='abs zon rnd'></div>
-    <div id='hov09' class='abs zon rnd'></div>
-    <div id='hov10' class='abs zon rnd'></div>
-    <div id='hov11' class='abs zon rnd'></div>
+    <div id='zon08' class='abs zon rnd'></div>
+    <div id='zon09' class='abs zon rnd'></div>
+    <div id='zon10' class='abs zon rnd'></div>
+    <div id='zon11' class='abs zon rnd'></div>
 
-    <div id='hov12' class='abs zon rnd'></div>
-    <div id='hov13' class='abs zon rnd'></div>
-    <div id='hov14' class='abs zon rnd'></div>
-    <div id='hov15' class='abs zon rnd'></div>
+    <div id='zon12' class='abs zon rnd'></div>
+    <div id='zon13' class='abs zon rnd'></div>
+    <div id='zon14' class='abs zon rnd'></div>
+    <div id='zon15' class='abs zon rnd'></div>
 
     <!--========================================================================
-    SELECTED ZONES
+    CONSOLE
     -->
-    <div id='sel00' class='abs zon rnd'></div>
-    <div id='sel01' class='abs zon rnd'></div>
-    <div id='sel02' class='abs zon rnd'></div>
-    <div id='sel03' class='abs zon rnd'></div>
+    <div id='space2' class='wfl flt spc'></div>
 
-    <div id='sel04' class='abs zon rnd'></div>
-    <div id='sel05' class='abs zon rnd'></div>
-    <div id='sel06' class='abs zon rnd'></div>
-    <div id='sel07' class='abs zon rnd'></div>
+    <div id='notation' class='w25 flt cnt brd box dsp msk'>NOTATION</div>
+    <div id='console' class='w50 flt cnt brd box dsp'>CONSOLE</div>
 
-    <div id='sel08' class='abs zon rnd'></div>
-    <div id='sel09' class='abs zon rnd'></div>
-    <div id='sel10' class='abs zon rnd'></div>
-    <div id='sel11' class='abs zon rnd'></div>
+    <div id='yes' class='yon box flt cnt brd btn'>Y</div>
+    <div id='reset' class='w25 box flt cnt brd btn'>RESET</div>
+    <div id='no' class='yon box flt cnt brd btn'>N</div>
 
-    <div id='sel12' class='abs zon rnd'></div>
-    <div id='sel13' class='abs zon rnd'></div>
-    <div id='sel14' class='abs zon rnd'></div>
-    <div id='sel15' class='abs zon rnd'></div>
-
+    <!--========================================================================
+    SELECTED
+    -->
     <div id='selected' class='abs zon rnd'></div>
 
-  </div> <!-- id='arena' END -->
+  </div> <!-- arena's end -->
 
 </body>
 
 <!--//////////////////////////////////////////////////////////////////////////// SCRIPTS
 -->
-<script type='text/javascript' src='uGame.js'></script>
-<script type='text/javascript' src='vFunc.js'></script>
-<script type='text/javascript' src='wText.js'></script>
-<script type='text/javascript' src='xEncy.js'></script>
-<script type='text/javascript' src='yChan.js'></script>
+<script>
+  const Ω = {} // Only global
+</script>
+
+<script type='text/javascript' src='vTool.js'></script>
+<script type='text/javascript' src='wData.js'></script>
+<script type='text/javascript' src='xPage.js'></script>
+<script type='text/javascript' src='yLstn.js'></script>
 <script type='text/javascript' src='zMain.js'></script>
 
-<!--//////////////////////////////////////////////////////////////////////////// END
--->
 </html>
