--- a/index.html
+++ b/index.html
@@ -562,6 +562,23 @@ This standard form is called TORUS and this iteration is meant to be it!
     <div id='zon15' class='abs zon rnd'></div>
 
     <!--========================================================================
+    GHOSTS
+    -->
+    <div id='gho00' class=''></div>
+    <div id='gho01' class=''></div>
+    <div id='gho02' class=''></div>
+    <div id='gho03' class=''></div>
+    <div id='gho04' class=''></div>
+    <div id='gho05' class=''></div>
+    <div id='gho06' class=''></div>
+    <div id='gho07' class=''></div>
+
+    <!--========================================================================
+    TRIGGER
+    -->
+    <div id='trigger' class=''></div>
+
+    <!--========================================================================
     CONSOLE
     -->
     <div id='space2' class='wfl flt spc'></div>
